<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="26dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/marcaproductos"
        android:padding="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="123dp"
            android:layout_height="131dp"
            android:background="@color/white"
            app:srcCompat="@drawable/prod1" />

        <TextView
            android:id="@+id/txtproduct_name"
            android:layout_width="99dp"
            android:layout_height="61dp"
            android:layout_alignTop="@id/product_image"
            android:layout_marginStart="7dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/product_name1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtproduct_details"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtproduct_name"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/product_details1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/product_details2"
            android:layout_width="115dp"
            android:layout_height="37dp"
            android:layout_below="@id/txtproduct_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/product_details2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtproduct_details"
            android:layout_marginStart="129dp"
            android:layout_marginTop="-20dp"
            android:layout_toEndOf="@id/product_image"
            android:gravity="center_horizontal"
            android:text="@string/product_price1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/favorito"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_above="@+id/product_price"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="52dp"
            android:layout_toEndOf="@+id/txtproduct_name"
            android:src="@drawable/iconfav"
            app:icon="@drawable/estrella" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
