<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textGallery"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="Modificacion correo"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnpermitir"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        android:src="@drawable/icon3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="108dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/marcaproductos"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="78dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/circulo">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="159dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_person_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="204dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtNuevo"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="260dp"
        android:text="@string/nuevo"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="#EFB810"
        android:text="@string/modificar"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNuevoCorreo"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtConfirmarCorreo"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="304dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtConfirmar"
        android:layout_width="91dp"
        android:layout_height="21dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="312dp"
        android:gravity="center"
        android:text="@string/confirmar"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>